# voltcode

./: .augmentignore  .env.local.example  .gitignore  App.tsx  CLAUDE.md  README.md  index.css  index.html  metadata.json  package.json  pnpm-lock.yaml  tailwind.config.js  types.ts
.claude/: settings.local.json
claude-tools/: start_dev_server.json
components/: AgentSwitchDialog.tsx  ChatPanel.tsx  ConfigPanel.tsx  ProfilePanel.tsx  ProjectSelector.tsx  QueueIndicator.tsx  Sidebar.tsx  TaskCard.tsx  TaskColumn.tsx  TaskHeader.tsx  TaskPanel.tsx  WorkspacePanel.tsx  XTerminal.tsx
docs/: ANYCODE_SUMMARY.md  API_PROXY_SUMMARY.md  CHANGE_PROJECT.md  INTEGRATION_STATUS.md  PRODUCT_ROADMAP.md  PROJECT_SELECTOR.md  RESOURCE_MIGRATION.md  SESSION_DATA_STORE.md  SHELL_PERMISSIONS.md  SLASH_COMMANDS.md  TAURI_SIDECAR.md  TERMINAL_FIX.md  VIBE_KANBAN_SUMMARY.md
services/: agentAnalyzer.ts  cliRouter.ts  gemini.ts  parallelTaskManager.ts  sessionStore.ts  sidecar.ts  slashCommands.ts  taskStore.ts  todoParser.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api_proxy/: client.rs  convert.rs  mod.rs  server.rs  types.rs
