[package]
name = "open-code-studio"
version = "0.0.0"
description = "AI-powered IDE for generating and previewing web applications"
authors = ["you"]
edition = "2021"

[lib]
name = "open_code_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48.0", features = ["process", "io-util", "macros", "sync"] }
portable-pty = "0.8"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "term"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
