[package]
name = "voltcode"
version = "0.0.0"
description = "AI-powered IDE for generating and previewing web applications"
authors = ["you"]
edition = "2021"

[lib]
name = "voltcode_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-store = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
tokio = { version = "1.48.0", features = ["full"] }
portable-pty = "0.8"

# API Proxy dependencies
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = { version = "0.7", features = ["macros"] }
futures-util = "0.3"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "term"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
